[package]
name = "objc-encode"
version = "1.1.0" # Remember to update html_root_url in lib.rs
authors = ["Steven Sheldon"]
edition = "2018"

description = "Objective-C type encoding creation and parsing in Rust."
keywords = ["objective-c", "osx", "ios", "cocoa", "uikit"]
categories = ["development-tools::ffi", "no-std"]
readme = "README.md"
repository = "http://github.com/SSheldon/rust-objc-encode"
documentation = "https://docs.rs/objc-encode/"
license = "MIT"

exclude = [
  ".gitignore",
]
